<resources>
    <string name="app_name">줄넘기 측정기</string>

    <string name="counter">측정기</string>
    <string name="jps">JPS</string>
    <string name="is_timer">타이머 유무</string>
    <string name="record">기록 조회</string>
    <string name="group_name">그룹 이름</string>
    <string name="name">이름</string>
    <string name="count">측정 횟수</string>
    <string name="detail">상세 정보 입력</string>
    <string name="kinds_of_jump_rope">줄넘기 종류</string>
    <string name="grade">학년</string>
    <string name="elapsed_time">경과 시간(초)</string>

    <string name="decrease">감소</string>
    <string name="edit">수정</string>
    <string name="delete">삭제</string>
    <string name="confirm">확인</string>
    <string name="alarm">알림</string>
    <string name="add">추가</string>
    <string name="cancel">취소</string>
    <string name="exit">나가기</string>
    <string name="start">시작</string>
    <string name="stop">종료</string>
    <string name="save">저장</string>
    <string name="time_is_out">시간이 종료되었습니다.</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="delete_alarm">정말로 삭제하시겠습니까? 복구 할 수 없습니다.</string>
    <string name="blank">공란</string>

    <string name="group">그룹</string>

    <string name="delete_group">그룹 삭제</string>

    <string name="add_new_group">새 그룹 추가</string>
    <string name="add_new_group_success">새 그룹 추가에 성공하였습니다.</string>
    <string name="add_new_group_failure_group_name_already_exists">새 그룹 추가에 실패하였습니다. 새 그룹 이름이 이미 존재합니다.</string>
    <string name="add_new_group_failure_no_group_name">새 그룹 추가에 실패하였습니다. 새 그룹 이름을 입력해주십시오.</string>

    <string name="add_new_group_with_existing_group">기존 그룹으로 새 그룹 추가</string>
    <string name="add_new_group_with_existing_group_success">기존 그룹으로 새 그룹 추가에 성공하였습니다.</string>

    <string name="edit_group">그룹 수정</string>
    <string name="edit_group_success">그룹 수정에 성공하였습니다.</string>
    <string name="edit_group_failure_group_name_already_exists">그룹 수정에 실패하였습니다. 그룹 이름이 이미 존재합니다.</string>
    <string name="edit_group_failure_no_group_name">그룹 수정에 실패하였습니다. 그룹 이름을 입력해주십시오.</string>

    <string name="delete_record">기록 삭제</string>

    <string name="add_new_record">새 기록 추가</string>
    <string name="add_new_record_success">새 기록 추가에 성공하였습니다.</string>
    <string name="add_new_record_failure_no_name">새 기록 추가에 실패하였습니다. 이름을 입력해주십시오.</string>

    <string name="edit_record">기록 수정</string>
    <string name="edit_record_success">기록 수정에 성공하였습니다.</string>
    <string name="edit_record_failure_no_name">기록 수정에 실패하였습니다. 이름을 입력해주십시오.</string>

    <string name="group_does_not_exists">그룹이 존재하지 않습니다.</string>

    <string name="sort_setting">정렬 설정</string>
    <string name="sort_type">정렬 형태</string>
    <string name="grade_contain_setting">학년 설정</string>
    <string name="kinds_of_jump_rope_contain_setting">줄넘기 종류 설정</string>
    <string name="record_sort_style_setting">기록 정렬 스타일</string>

    <string name="average_count">평균 측정 횟수</string>
    <string name="average_elapsed_time">평균 경과 시간</string>
    <string name="average_jps">평균 JPS</string>
    <string name="group_average">그룹 평균</string>
    <string name="record_detail">기록 상세 정보</string>
    <string name="number">순서</string>

    <string-array name="grade">
        <item>공란</item>
        <item>어린이</item>
        <item>초등학교 1학년</item>
        <item>초등학교 2학년</item>
        <item>초등학교 3학년</item>
        <item>초등학교 4학년</item>
        <item>초등학교 5학년</item>
        <item>초등학교 6학년</item>
        <item>중학교 1학년</item>
        <item>중학교 2학년</item>
        <item>중학교 3학년</item>
        <item>고등학교 1학년</item>
        <item>고등학교 2학년</item>
        <item>고등학교 3학년</item>
        <item>성인</item>
    </string-array>

    <string-array name="grade_simple">
        <item>공란</item>
        <item>어린이</item>
        <item>초1</item>
        <item>초2</item>
        <item>초3</item>
        <item>초4</item>
        <item>초5</item>
        <item>초6</item>
        <item>중1</item>
        <item>중2</item>
        <item>중3</item>
        <item>고1</item>
        <item>고2</item>
        <item>고3</item>
        <item>성인</item>
    </string-array>

    <string-array name="kinds_of_jump_rope">
        <item>공란</item>
        <item>두발 1회선 1도약</item>
        <item>한발 1회선 1도약</item>
        <item>엇갈아 1회선 1도약</item>
        <item>엇갈아 풀어 1회선 1도약</item>
        <item>발바꿔 1회선 1도약</item>
        <item>두발 2회선 1도약</item>
        <item>한발 2회선 1도약</item>
        <item>엇갈아 2회선 1도약</item>
        <item>엇갈아 풀어 2회선 1도약</item>
        <item>두발 3회선 1도약</item>
        <item>한발 3회선 1도약</item>
        <item>엇갈아 3회선 1도약</item>
    </string-array>

    <string-array name="record_sort_style">
        <item>간단히</item>
        <item>자세히</item>
    </string-array>

    <string-array name="setting_type">
        <item>없음</item>
        <item>제외하기</item>
        <item>포함하기</item>
    </string-array>

    <string-array name="sort_type">
        <item>최근 순</item>
        <item>오래된 순</item>
        <item>측정 횟수 높은 순</item>
        <item>측정 횟수 낮은 순</item>
        <item>경과 시간 높은 순</item>
        <item>경과 시간 낮은 순</item>
        <item>JPS 높은 순</item>
        <item>JPS 낮은 순</item>
    </string-array>
</resources>