<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Record">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group"/>

            <Spinner
                android:id="@+id/groups"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:onClick="OnAddGroup"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_group"/>

            <Button
                android:id="@+id/delete_group"
                android:onClick="OnDeleteGroup"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_group"/>

            <Button
                android:id="@+id/edit_group"
                android:onClick="OnEditGroup"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_group"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:onClick="OnAddRecord"
                android:id="@+id/add_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_new_record"/>

            <Button
                android:onClick="OnSortSetting"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:id="@+id/sort_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_setting"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sort_style_simple_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1.3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number"/>

            <TextView
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"/>

            <TextView
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/count"/>

            <TextView
                android:textStyle="bold"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/elapsed_time"/>

        </LinearLayout>

        <ListView
            android:id="@+id/records"
            android:layout_marginBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <Button
        android:onClick="OnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>