<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/add_new_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_group"/>

    <Button
        android:id="@+id/add_with_existing_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_group_with_existing_group" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>