<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordDetail">

    <LinearLayout
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_detail"/>

        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/add_time"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/group"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/group_name"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/grade"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kinds_of_jump_rope"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/kinds_of_jump_rope"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/count"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elapsed_time"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/second"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jps"/>

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/jps"/>

        </LinearLayout>

        <TextView
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_average"/>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/average_count"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:id="@+id/average_count"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/average_elapsed_time"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:id="@+id/average_elapsed_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/average_jps"/>

                <TextView
                    android:gravity="center_vertical"
                    android:layout_marginStart="5dp"
                    android:id="@+id/average_jps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:onClick="OnEditRecord"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:id="@+id/edit_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_record"/>

            <Button
                android:onClick="OnDeleteRecord"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:id="@+id/delete_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_record"/>

        </LinearLayout>

        <Button
            android:onClick="OnExit"
            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>